# convention-nametag-frontend

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSES  README.md  Toolchain-Rpi.cmake  configuration.toml  cross-cmake.sh  cross-compiler.md  package.json  tsconfig.json
.github/: dependabot.yml
components/: ThumbnailPaper.tsx  VideoEntry.tsx  VideoMetadata.ts  VideoMetadata.tsx  VideoUpload.tsx  config.ts  utility.ts
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  VideoEntry.tsx  VideoMetadata.tsx  utility.ts
pages/: _app.tsx  index.tsx
public/: index.html
res/: bsd2-license-template.txt
res/static/: index.html  main.css  ui.js
source/: main.cpp
source/net/: server.cpp  server.hpp
source/util/: time.cpp  time.hpp
source/video/: decoder.hpp  idleDecoder.cpp  idleDecoder.hpp  player.cpp  player.hpp  videoDecoder.cpp  videoDecoder.hpp  videoPlayer.cpp  videoPlayer.hpp
source/wrappers/: driver.cpp  driver.hpp  driver.tpp  hardware.cpp  hardware.hpp  sh1106.cpp  ssd1305.cpp  ssd1322.cpp
src/: ThumbnailPaper.tsx  VideoUpload.tsx
